# bevy_android

./: .Cargo.toml.swp  Cargo.toml
src/: .lib.rs.swp  home.rs  lib.rs  menu.rs  settings.rs
src/components/: balance_display.rs  mod.rs  navigator.rs
src/primitives/: button.rs
src/theme/: color.rs  fonts.rs  icons.rs
