[package]
name = "testandroid"
version = "0.1.0"
edition = "2021"

[dependencies]
#bevy = "0.15.0"
bevy = { version = "0.15.0", default-features = false, features = [
  "android-native-activity",
  "bevy_window",
  "bevy_color",
  "bevy_core_pipeline",
  "multi_threaded",
  "sysinfo_plugin",
]}

log = "0.4.22"

[lib]
crate-type = [
    "cdylib",    # needed for Android
]

[package.metadata.android]
package = "org.testandroid.example"
apk_name = "testandroid"
strip = "strip"
build_targets = ["aarch64-linux-android"]

[package.metadata.android.sdk]
target_sdk_version = 33

[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
